# HEXLET--study-practice-

./: README.md  main_window.py  package-lock.json  pyproject.toml
app/: __main__.py
app/controllers/: tasks_controller.py
app/models/: db.py  task.py
app/views/: main_window.py
tests/: test_*.py  test_all.py
