[project]
name = "hexlet-study-practice"
version = "0.1.0"
description = "task-manager"
authors = [
    {name = "Ekimov George", email = "ekimovgosha@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hexlet-study-practice"
version = "0.1.0"
description = "task-manager"
authors = ["Ekimov George <ekimovgosha@mail.ru>"]
packages = [{ include = "app" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.6.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.25"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"

